k8s/prod/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: refractr
  labels:
    app: refractr
  annotations:
    fluxcd.io/automated: "true"
    fluxcd.io/tag.refractr-web: glob:dev-*
spec:
  replicas: 1
  selector:
    matchLabels:
      app: refractr
  template:
    metadata:
      labels:
        app: refractr
    spec:
      containers:
        - name: refractr-web
          image: itsre/refractr:dev
          ports:
            - containerPort: 80
            - containerPort: 443
